--- a/index.html
+++ b/index.html
@@ -3,101 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>Hacked</title>
-
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "Courier New", monospace;
-    }
-
-    body {
-        height: 100vh;
-        background: radial-gradient(circle at top, #0b0f14, #000);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        color: #00ff9c;
-    }
-
-    .container {
-        text-align: center;
-        animation: flicker 3s infinite;
-    }
-
-    h1 {
-        font-size: 3.5rem;
-        letter-spacing: 4px;
-        text-shadow:
-            0 0 5px #00ff9c,
-            0 0 15px #00ff9c,
-            0 0 30px #00ff9c;
-    }
-
-    .sub {
-        margin-top: 15px;
-        font-size: 1rem;
-        opacity: 0.8;
-    }
-
-    /* glitch effect */
-    h1::before,
-    h1::after {
-        content: attr(data-text);
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        opacity: 0.7;
-    }
-
-    h1::before {
-        color: #ff004c;
-        animation: glitch 2s infinite;
-    }
-
-    h1::after {
-        color: #00eaff;
-        animation: glitch 1.5s infinite reverse;
-    }
-
-    @keyframes glitch {
-        0% { transform: translate(-50%, 0); }
-        20% { transform: translate(-48%, -2px); }
-        40% { transform: translate(-52%, 2px); }
-        60% { transform: translate(-49%, 1px); }
-        80% { transform: translate(-51%, -1px); }
-        100% { transform: translate(-50%, 0); }
-    }
-
-    @keyframes flicker {
-        0%, 100% { opacity: 1; }
-        50% { opacity: 0.9; }
-        70% { opacity: 0.6; }
-    }
-
-    /* scanline effect */
-    body::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: repeating-linear-gradient(
-            to bottom,
-            rgba(255,255,255,0.03),
-            rgba(255,255,255,0.03) 1px,
-            transparent 1px,
-            transparent 3px
-        );
-        pointer-events: none;
-    }
+ 
 </style>
 </head>
-
+<style>
+   .data-text{
+      text-align:center;
+   }
+</style>
 <body>
     <div class="container">
-        <h1 data-text="HACKED BY ANKON">HACKED BY ANKON</h1>
+        <h1 data-text="HACKED BY 0xspeedo">HACKED BY ANKON</h1>
         <div class="sub">system breached</div>
     </div>
 </body>
